cdm: fix alignment of feed title in vfeeds

--- a/cdm.css
+++ b/cdm.css
@@ -125,3 +125,8 @@ div.cdm.even.Unread, div.cdm.odd.Unread {
 div.cdm.even, div.cdm.odd {
 	background : #f0f0f0;
 }
+
+div.cdmHeader div.hlFeed, div.cdmHeader div.hlFeed a {
+	vertical-align : middle;
+	color : gray;
+}
